# efl-points-tracker

./: .gitignore  main.py  pyproject.toml  readme.md
.streamlit/: secrets.toml
components/: graph.py  head_to_head.py  league_table.py  sidebar.py
db/: database.py  models.py
utils/: api.py  data_processor.py  data_sync.py  dev_mode.py  football_api.py
